[tool.poetry]
name = "langchain-google-search"
version = "0.1.0"
description = ""
authors = ["Joy Cheng <joy.cheng@phntms.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchainhub = "^0.1.20"
langchain-community = "^0.2.10"
google-api-python-client = "^2.139.0"
huggingface-hub = "^0.24.3"
transformers = "^4.43.3"
jinja2 = "^3.1.4"
langchain-huggingface = "^0.0.3"
langchain-google-community = "^1.0.7"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
